nit: fix text alignment on builds page

--- a/web/assets/css/job.less
+++ b/web/assets/css/job.less
@@ -9,7 +9,8 @@
   li a {
     text-align: left;
     font-size: 20px;
-    padding: 5px;
+    padding: 0;
+    padding-left: 5px;
     color: @grey20;
   }
 }
