--- a/web/assets/css/modules.less
+++ b/web/assets/css/modules.less
@@ -127,6 +127,7 @@
   .build-duration {
     float: left;
     width: 15%;
+    margin-right: 1em;
   }
 
   .inputs,
